fixed: #4 모바일에서 overflow가 먹히지 않는 문제를 수정 23-03-07

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,3 +59,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+html, body {
+  touch-action: none;
+  overflow: hidden;
+}
